# cutty

./: Cargo.toml  README.md
src/: app.rs  main.rs  shortcut.rs  ui.rs
