[package]
name = "cutty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.35", features = ["serde"] }
crossterm = "0.27.0"
ratatui = "0.26.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features= ["derive"] }
serde_json = "1.0"
